# DadLink

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  ADMIN_DASHBOARD_PLAN.md  ADMIN_FEATURE_DEVELOPMENT_PLAN.md  ADMIN_INTEGRATION_TESTS.md  ADMIN_PANEL_COMPLETION.md  ADMIN_PANEL_DEVELOPMENT_COMPLETE.md  ADMIN_QT_DESKTOP_PLAN.md  ADMIN_SERVER_INTEGRATION_COMPLETE.md  ADMIN_WEEK1_COMPLETE.md  ARCHITECTURE.md  AUDIO_ENGINEERING.md  BUILD_AND_TEST.md  BUILD_STATUS.md  CASCADE_RULES.md  CLEANUP_TEST.md  CLIENT_DESIGN.md  CLOUDFLARE_TUNNEL_SETUP.md  COMPLETE.md  COMPLETION_STATUS.md  CONFIGURE_ROUTER_DDNS.md  CREATE_RELEASE.md  CURRENT_STATUS.md  DEBUG_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_PLAN_MVP.md  DEVELOPMENT_ROADMAP.md  DIGITALOCEAN_SETUP.md  DISTRIBUTION.md  DOCKER_DEPLOYMENT.md  DOCKER_README.md  DOCKER_STATUS.md  Dockerfile.sqlx  ENHANCED_MULTICHANNEL_UI.md  FINAL_INTEGRATION_SUCCESS.md  FINAL_TEST.md  (+100 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-build.yml
client/: BUILD_PORTABLE.md  CLEANUP_IMPROVEMENTS.md  CMakeLists.txt  CMakePresets.json  CURRENT_STATUS.md  DEPLOYMENT_SOLUTION.md  FINAL_STYLING_UPDATE.md  IMPLEMENTATION_PLAN.md  INSTALL_QT6.md  INTEGRATION_TEST_PLAN.md  LESSONS_LEARNED.md  MULTI_CHANNEL_DESIGN.md  MUTE_DEAFEN_TEST_GUIDE.md  NEXT_STEPS.md  QUICK_TEST_GUIDE.md  README.md  SESSION_PROGRESS.md  STYLESHEET_CONFLICT_ANALYSIS.md  TROUBLESHOOTING.md  UI_SIZING_UPDATE.md  UI_STYLING_FIXED.md  VOICE_INTEGRATION_STATUS.md  WEBSOCKET_FIX_SUMMARY.md  WEBSOCKET_USER_LIST_ISSUE.md  admin_panel.h.fixed  build_and_deploy.bat  check_deps.ps1  config.json.example  debug.txt  deploy.bat  kill_client.bat  package-release.ps1  rebuild-portable.bat  rebuild_with_fix.ps1  rebuild_with_presence_fix.ps1  run_client.bat  run_client2.ps1  run_with_console.bat  run_with_logs.ps1  start_second_client.bat  (+4 more)
client/deploy/VoIP-Client/: README.txt  VERSION.txt
client/examples/: network_test.cpp  voice_loopback_demo.cpp
client/include/api/: admin_api_client.h
client/include/audio/: audio_engine.h  audio_mixer.h  jitter_buffer.h  opus_codec.h
client/include/common/: lock_free_queue.h  result.h  types.h
client/include/crypto/: key_exchange.h  srtp_session.h
client/include/network/: udp_socket.h  websocket_client.h
client/include/protocol/: control_messages.h
client/include/session/: voice_session.h
client/include/ui/: channel_roster_manager.h  channel_widget.h  hotkey_input_dialog.h  hotkey_manager.h  login_dialog.h  main_window.h  settings_dialog.h
client/include/ui/admin/: admin_panel.h  channel_manager.h  create_channel_dialog.h  create_role_dialog.h  create_user_dialog.h  dashboard_widget.h  edit_channel_dialog.h  edit_role_dialog.h  edit_user_dialog.h  role_manager.h  user_manager.h
client/release-package/DadLink-1.0.0/: README.txt
client/resources/: README.md  resources.qrc
client/resources/icons/: PLACEHOLDER.txt
client/resources/images/: PLACEHOLDER.txt
client/resources/styles/: dark_theme.qss
client/src/: main.cpp  ui_main.cpp
client/src/api/: admin_api_client.cpp
client/src/audio/: audio_engine.cpp  audio_mixer.cpp  jitter_buffer.cpp  opus_codec.cpp
client/src/common/: result.cpp
client/src/crypto/: key_exchange.cpp  srtp_session.cpp
client/src/network/: udp_socket.cpp  websocket_client.cpp
client/src/session/: voice_session.cpp
client/src/ui/: channel_roster_manager.cpp  channel_widget.cpp  hotkey_input_dialog.cpp  hotkey_manager.cpp  login_dialog.cpp  main_window.cpp  settings_dialog.cpp
client/src/ui/admin/: admin_panel.cpp  channel_manager.cpp  create_channel_dialog.cpp  create_role_dialog.cpp  create_user_dialog.cpp  dashboard_widget.cpp  edit_channel_dialog.cpp  edit_role_dialog.cpp  edit_user_dialog.cpp  role_manager.cpp  user_manager.cpp
client/tests/audio/: test_jitter_buffer.cpp  test_opus_codec.cpp
client/tests/integration/: test_audio_loopback.cpp
server/: .dockerignore  CHANNEL_MANAGER_IMPLEMENTATION.md  Cargo.toml  Dockerfile  README.md  SUPABASE_TESTING_GUIDE.md  TESTING_COMPLETE.md  TEST_USERS.md  rebuild_and_test.ps1  run_tests.ps1  run_with_logs.ps1  server_log.txt  setup_db.bat  setup_db.ps1  test_db.ps1  users.json  verify_supabase.ps1
server/config/: server.toml  server.yaml.example
server/migrations/: 001_initial_schema.sql  002_seed_data.sql
server/src/: auth.rs  channel.rs  channel_manager.rs  config.rs  error.rs  lib.rs  main.rs  main_with_db.rs  network.rs  org.rs  permissions.rs  types.rs  user_registry.rs
server/src/api/: mod.rs
server/src/api/admin/: audit_log.rs  channels.rs  metrics.rs  mod.rs  organizations.rs  roles.rs  users.rs
server/src/crypto/: key_exchange.rs  mod.rs  session_manager.rs  srtp.rs
server/src/db/: connection.rs  mod.rs
server/src/db/repositories/: channel.rs  mod.rs  organization.rs  role.rs  user.rs
server/src/network/: tls.rs  udp.rs
server/src/routing/: mod.rs  voice_router.rs
server/tests/: database_integration_tests.rs  end_to_end_test.rs  repository_tests.rs
server/tests/common/: mod.rs
server/tools/: generate_certs.ps1  generate_certs.sh  generate_password_hash.rs
